--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dist"
   ],
   "dependencies": {
+    "astn": "^0.110.19",
     "exupery": "^0.1.4",
     "exupery-core-alg": "^0.1.4",
     "exupery-core-data": "^0.1.1",
