--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "dist"
   ],
   "dependencies": {
-    "astn": "^0.110.26",
-    "exupery": "^0.1.17",
-    "exupery-core-alg": "^0.1.4",
+    "astn": "^0.110.27",
+    "exupery": "^0.1.20",
+    "exupery-core-alg": "^0.1.7",
+    "exupery-core-bin": "^0.1.5",
     "exupery-core-data": "^0.1.10",
     "exupery-core-dev": "^0.1.1",
-    "exupery-core-resources": "^0.2.2",
-    "pareto-fountain-pen": "^0.1.15",
-    "pareto-standard-operations": "^0.1.3"
+    "pareto-fountain-pen": "^0.1.22",
+    "pareto-standard-operations": "^0.1.5"
   }
 }
