--- a/pub/package.json
+++ b/pub/package.json
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "astn": "^0.113.20",
+    "astn-sealed": "^0.1.1",
     "exupery": "^0.3.14",
     "pareto-fountain-pen": "^0.3.28",
     "pareto-standard-operations": "^0.3.36"
