--- a/pub/package.json
+++ b/pub/package.json
@@ -1,6 +1,8 @@
 {
   "name": "pareto",
-  "version": "0.80.13",
+  "version": "0.80.14",
+  "author": "Corno",
+  "license": "Apache-2.0",
   "description": "A library for the Pareto programming Language",
   "main": "./dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,8 +10,8 @@
     "dist"
   ],
   "dependencies": {
-    "liana-core": "^0.0.18",
+    "liana-core": "^0.0.19",
     "pareto-core-dev": "^0.12.8",
-    "pareto-fountain-pen": "^0.4.40"
+    "pareto-fountain-pen": "^0.4.42"
   }
 }
